--- a/OoTTracker/.gitignore
+++ b/OoTTracker/.gitignore
@@ -229,3 +229,32 @@ _Pvt_Extensions
 
 # FAKE - F# Make
 .fake/
+/ClientApp/.angular/cache/angular-webpack/a0b7444a159bc508fdb925655429ef7c38a921c4/0.pack
+/ClientApp/.angular/cache/angular-webpack/a0b7444a159bc508fdb925655429ef7c38a921c4/1.pack
+/ClientApp/.angular/cache/babel-webpack/1bfb3d0bc49d6cb14c62aaca3b51e5e3.json
+/ClientApp/.angular/cache/babel-webpack/1ffbaa9ad232048bf80f885475ac0629.json
+/ClientApp/.angular/cache/angular-webpack/a0b7444a159bc508fdb925655429ef7c38a921c4/2.pack
+/ClientApp/.angular/cache/angular-webpack/a0b7444a159bc508fdb925655429ef7c38a921c4/3.pack
+/ClientApp/.angular/cache/babel-webpack/3e9bb95c48c55804a2f66c7ecb0c222f.json
+/ClientApp/.angular/cache/angular-webpack/a0b7444a159bc508fdb925655429ef7c38a921c4/4.pack
+/ClientApp/.angular/cache/angular-webpack/a0b7444a159bc508fdb925655429ef7c38a921c4/5.pack
+/ClientApp/.angular/cache/angular-webpack/a0b7444a159bc508fdb925655429ef7c38a921c4/6.pack
+/ClientApp/.angular/cache/angular-webpack/a0b7444a159bc508fdb925655429ef7c38a921c4/7.pack
+/ClientApp/.angular/cache/angular-webpack/a0b7444a159bc508fdb925655429ef7c38a921c4/8.pack
+/ClientApp/.angular/cache/babel-webpack/8e8fbd33871b2ad0609d95ecc7b7a424.json
+/ClientApp/.angular/cache/angular-webpack/a0b7444a159bc508fdb925655429ef7c38a921c4/9.pack
+/ClientApp/.angular/cache/angular-webpack/a0b7444a159bc508fdb925655429ef7c38a921c4/10.pack
+/ClientApp/.angular/cache/angular-webpack/a0b7444a159bc508fdb925655429ef7c38a921c4/11.pack
+/ClientApp/.angular/cache/angular-webpack/a0b7444a159bc508fdb925655429ef7c38a921c4/12.pack
+/ClientApp/.angular/cache/angular-webpack/a0b7444a159bc508fdb925655429ef7c38a921c4/13.pack
+/ClientApp/.angular/cache/babel-webpack/52f49931dd70d73fa27a85b1ef394d5c.json
+/ClientApp/.angular/cache/babel-webpack/68c1b3a65d8ef0b43566ead0952fd0bc.json
+/ClientApp/.angular/cache/babel-webpack/550079f4bd126fff58bf7c8a9b906b32.json
+/ClientApp/.angular/cache/babel-webpack/a0e2f77921eb56b8d8cc87db50770ba3.json
+/ClientApp/.angular/cache/babel-webpack/be0869300e3d936441592ac164168555.json
+/ClientApp/.angular/cache/babel-webpack/bfcea8a9b5a894c7bd92262bd3404470.json
+/ClientApp/.angular/cache/babel-webpack/e7585bb9f1984b637d80773cb6c48ebd.json
+/ClientApp/.angular/cache/babel-webpack/f2ef31fabbae9c354eafb5319c44312c.json
+/ClientApp/.angular/cache/babel-webpack/f847fcee46b9401efe8529bfb558288a.json
+/ClientApp/.angular/cache/angular-webpack/a0b7444a159bc508fdb925655429ef7c38a921c4/index.pack
+/ClientApp/.angular/cache/angular-webpack/a0b7444a159bc508fdb925655429ef7c38a921c4/index.pack.old
