--- a/OoTTracker/.gitignore
+++ b/OoTTracker/.gitignore
@@ -258,3 +258,55 @@ _Pvt_Extensions
 /ClientApp/.angular/cache/babel-webpack/f847fcee46b9401efe8529bfb558288a.json
 /ClientApp/.angular/cache/angular-webpack/a0b7444a159bc508fdb925655429ef7c38a921c4/index.pack
 /ClientApp/.angular/cache/angular-webpack/a0b7444a159bc508fdb925655429ef7c38a921c4/index.pack.old
+/ClientApp/.angular/cache/angular-webpack/0b6aca18478ab90621e82f7965fc25acca9b6fef/0.pack
+/ClientApp/.angular/cache/angular-webpack/c80ada273568c5adbaca4b65dfecb87ca7250476/0.pack
+/ClientApp/.angular/cache/angular-webpack/0b6aca18478ab90621e82f7965fc25acca9b6fef/1.pack
+/ClientApp/.angular/cache/angular-webpack/c80ada273568c5adbaca4b65dfecb87ca7250476/1.pack
+/ClientApp/.angular/cache/babel-webpack/1c83b12c9406d1707459f2e852b5061d.json
+/ClientApp/.angular/cache/babel-webpack/1ffa5eef59d96310b63072d96e2c6602.json
+/ClientApp/.angular/cache/angular-webpack/0b6aca18478ab90621e82f7965fc25acca9b6fef/2.pack
+/ClientApp/.angular/cache/angular-webpack/c80ada273568c5adbaca4b65dfecb87ca7250476/2.pack
+/ClientApp/.angular/cache/angular-webpack/0b6aca18478ab90621e82f7965fc25acca9b6fef/3.pack
+/ClientApp/.angular/cache/angular-webpack/c80ada273568c5adbaca4b65dfecb87ca7250476/3.pack
+/ClientApp/.angular/cache/babel-webpack/3d56386f8df570d03540235fcddbde4b.json
+/ClientApp/.angular/cache/angular-webpack/0b6aca18478ab90621e82f7965fc25acca9b6fef/4.pack
+/ClientApp/.angular/cache/angular-webpack/c80ada273568c5adbaca4b65dfecb87ca7250476/4.pack
+/ClientApp/.angular/cache/angular-webpack/0b6aca18478ab90621e82f7965fc25acca9b6fef/5.pack
+/ClientApp/.angular/cache/angular-webpack/c80ada273568c5adbaca4b65dfecb87ca7250476/5.pack
+/ClientApp/.angular/cache/babel-webpack/5a52c0bfb17c8b59d162e701ebfe406b.json
+/ClientApp/.angular/cache/babel-webpack/5f76e1e18ce4681552fbc578aa5fa635.json
+/ClientApp/.angular/cache/babel-webpack/5fcfa27520b7c8128a0dd820b086e9ee.json
+/ClientApp/.angular/cache/angular-webpack/0b6aca18478ab90621e82f7965fc25acca9b6fef/6.pack
+/ClientApp/.angular/cache/angular-webpack/c80ada273568c5adbaca4b65dfecb87ca7250476/6.pack
+/ClientApp/.angular/cache/angular-webpack/0b6aca18478ab90621e82f7965fc25acca9b6fef/7.pack
+/ClientApp/.angular/cache/angular-webpack/c80ada273568c5adbaca4b65dfecb87ca7250476/7.pack
+/ClientApp/.angular/cache/babel-webpack/7dfe2c969ad723dc3bbed2fdf3dcfdc2.json
+/ClientApp/.angular/cache/babel-webpack/7e4b089fea2851b451354a1a5dc032ca.json
+/ClientApp/.angular/cache/angular-webpack/0b6aca18478ab90621e82f7965fc25acca9b6fef/8.pack
+/ClientApp/.angular/cache/angular-webpack/c80ada273568c5adbaca4b65dfecb87ca7250476/8.pack
+/ClientApp/.angular/cache/angular-webpack/0b6aca18478ab90621e82f7965fc25acca9b6fef/9.pack
+/ClientApp/.angular/cache/angular-webpack/c80ada273568c5adbaca4b65dfecb87ca7250476/9.pack
+/ClientApp/.angular/cache/babel-webpack/9df2bf587ff2de06b96bb2b1ed30170a.json
+/ClientApp/.angular/cache/angular-webpack/0b6aca18478ab90621e82f7965fc25acca9b6fef/10.pack
+/ClientApp/.angular/cache/angular-webpack/c80ada273568c5adbaca4b65dfecb87ca7250476/10.pack
+/ClientApp/.angular/cache/angular-webpack/0b6aca18478ab90621e82f7965fc25acca9b6fef/11.pack
+/ClientApp/.angular/cache/angular-webpack/c80ada273568c5adbaca4b65dfecb87ca7250476/11.pack
+/ClientApp/.angular/cache/angular-webpack/0b6aca18478ab90621e82f7965fc25acca9b6fef/12.pack
+/ClientApp/.angular/cache/angular-webpack/c80ada273568c5adbaca4b65dfecb87ca7250476/12.pack
+/ClientApp/.angular/cache/angular-webpack/c80ada273568c5adbaca4b65dfecb87ca7250476/13.pack
+/ClientApp/.angular/cache/angular-webpack/c80ada273568c5adbaca4b65dfecb87ca7250476/14.pack
+/ClientApp/.angular/cache/angular-webpack/c80ada273568c5adbaca4b65dfecb87ca7250476/15.pack
+/ClientApp/.angular/cache/babel-webpack/3596c5df919edae7a2daa953d0de3446.json
+/ClientApp/.angular/cache/babel-webpack/5057f24b9f8cf2eee61644f01ad39f3e.json
+/ClientApp/.angular/cache/babel-webpack/06711c0f92e5a0149f34a3c5facbe4dc.json
+/ClientApp/.angular/cache/babel-webpack/5010197abf71fc3e3a895fef5422dd2e.json
+/ClientApp/.angular/cache/babel-webpack/a801b8090ddd8d6af795a2d643d94470.json
+/ClientApp/.angular/cache/babel-webpack/ba0c0608b8da8126b61a79188808111f.json
+/ClientApp/.angular/cache/babel-webpack/be5c171c52b6aec18833c14f2171ebb8.json
+/ClientApp/.angular/cache/babel-webpack/c02c4f7afcae13c260faae575e7765ba.json
+/ClientApp/.angular/cache/babel-webpack/e03cbb537149aee159618313059f0730.json
+/ClientApp/.angular/cache/babel-webpack/e469751857f321598cac36ce97c6b85b.json
+/ClientApp/.angular/cache/angular-webpack/0b6aca18478ab90621e82f7965fc25acca9b6fef/index.pack
+/ClientApp/.angular/cache/angular-webpack/c80ada273568c5adbaca4b65dfecb87ca7250476/index.pack
+/ClientApp/.angular/cache/angular-webpack/0b6aca18478ab90621e82f7965fc25acca9b6fef/index.pack.old
+/ClientApp/.angular/cache/angular-webpack/c80ada273568c5adbaca4b65dfecb87ca7250476/index.pack.old
