--- a/OoTTracker/OoTTracker.csproj
+++ b/OoTTracker/OoTTracker.csproj
@@ -23,6 +23,7 @@
 
     <ItemGroup>
       <Folder Include="ClientApp\src\models" />
+      <Folder Include="ClientApp\src\services" />
       <Folder Include="Controllers" />
     </ItemGroup>
 
