--- a/OoTTracker/.gitignore
+++ b/OoTTracker/.gitignore
@@ -310,3 +310,12 @@ _Pvt_Extensions
 /ClientApp/.angular/cache/angular-webpack/c80ada273568c5adbaca4b65dfecb87ca7250476/index.pack
 /ClientApp/.angular/cache/angular-webpack/0b6aca18478ab90621e82f7965fc25acca9b6fef/index.pack.old
 /ClientApp/.angular/cache/angular-webpack/c80ada273568c5adbaca4b65dfecb87ca7250476/index.pack.old
+/ClientApp/.angular/cache/angular-webpack/b8c06886099ac1266ca2b00c369001346b161fd9/0.pack
+/ClientApp/.angular/cache/angular-webpack/c80ada273568c5adbaca4b65dfecb87ca7250476/16.pack
+/ClientApp/.angular/cache/angular-webpack/c80ada273568c5adbaca4b65dfecb87ca7250476/17.pack
+/ClientApp/.angular/cache/angular-webpack/c80ada273568c5adbaca4b65dfecb87ca7250476/18.pack
+/ClientApp/.angular/cache/angular-webpack/c80ada273568c5adbaca4b65dfecb87ca7250476/19.pack
+/ClientApp/.angular/cache/angular-webpack/c80ada273568c5adbaca4b65dfecb87ca7250476/20.pack
+/ClientApp/src/services/filter.service.spec.ts
+/ClientApp/src/services/filter.service.ts
+/ClientApp/.angular/cache/angular-webpack/b8c06886099ac1266ca2b00c369001346b161fd9/index.pack
