--- a/OoTTracker/.gitignore
+++ b/OoTTracker/.gitignore
@@ -319,3 +319,26 @@ _Pvt_Extensions
 /ClientApp/src/services/filter.service.spec.ts
 /ClientApp/src/services/filter.service.ts
 /ClientApp/.angular/cache/angular-webpack/b8c06886099ac1266ca2b00c369001346b161fd9/index.pack
+/ClientApp/.angular/cache/angular-webpack/8a85ebd17520e35702d6dbdf5304e29c2b43dfe9/0.pack
+/ClientApp/.angular/cache/angular-webpack/8a85ebd17520e35702d6dbdf5304e29c2b43dfe9/1.pack
+/ClientApp/.angular/cache/angular-webpack/8a85ebd17520e35702d6dbdf5304e29c2b43dfe9/2.pack
+/ClientApp/.angular/cache/angular-webpack/8a85ebd17520e35702d6dbdf5304e29c2b43dfe9/3.pack
+/ClientApp/.angular/cache/angular-webpack/8a85ebd17520e35702d6dbdf5304e29c2b43dfe9/4.pack
+/ClientApp/.angular/cache/angular-webpack/8a85ebd17520e35702d6dbdf5304e29c2b43dfe9/5.pack
+/ClientApp/.angular/cache/angular-webpack/8a85ebd17520e35702d6dbdf5304e29c2b43dfe9/6.pack
+/ClientApp/.angular/cache/angular-webpack/8a85ebd17520e35702d6dbdf5304e29c2b43dfe9/7.pack
+/ClientApp/.angular/cache/angular-webpack/8a85ebd17520e35702d6dbdf5304e29c2b43dfe9/8.pack
+/ClientApp/.angular/cache/angular-webpack/8a85ebd17520e35702d6dbdf5304e29c2b43dfe9/9.pack
+/ClientApp/.angular/cache/angular-webpack/8a85ebd17520e35702d6dbdf5304e29c2b43dfe9/10.pack
+/ClientApp/.angular/cache/angular-webpack/8a85ebd17520e35702d6dbdf5304e29c2b43dfe9/11.pack
+/ClientApp/.angular/cache/angular-webpack/8a85ebd17520e35702d6dbdf5304e29c2b43dfe9/12.pack
+/ClientApp/.angular/cache/angular-webpack/a0b7444a159bc508fdb925655429ef7c38a921c4/14.pack
+/ClientApp/.angular/cache/angular-webpack/a0b7444a159bc508fdb925655429ef7c38a921c4/15.pack
+/ClientApp/.angular/cache/angular-webpack/a0b7444a159bc508fdb925655429ef7c38a921c4/16.pack
+/ClientApp/.angular/cache/angular-webpack/a0b7444a159bc508fdb925655429ef7c38a921c4/17.pack
+/ClientApp/.angular/cache/angular-webpack/a0b7444a159bc508fdb925655429ef7c38a921c4/18.pack
+/ClientApp/.angular/cache/angular-webpack/a0b7444a159bc508fdb925655429ef7c38a921c4/19.pack
+/ClientApp/.angular/cache/angular-webpack/a0b7444a159bc508fdb925655429ef7c38a921c4/20.pack
+/ClientApp/src/models/boss.ts
+/ClientApp/.angular/cache/angular-webpack/8a85ebd17520e35702d6dbdf5304e29c2b43dfe9/index.pack
+/ClientApp/.angular/cache/angular-webpack/8a85ebd17520e35702d6dbdf5304e29c2b43dfe9/index.pack.old
