--- a/OoTTracker/ClientApp/angular.json
+++ b/OoTTracker/ClientApp/angular.json
@@ -70,11 +70,11 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "OoTTracker:build:production"
+              "buildTarget": "OoTTracker:build:production"
             },
             "development": {
-              "browserTarget": "OoTTracker:build:development",
-              "proxyConfig": "proxy.conf.js"
+              "proxyConfig": "proxy.conf.js",
+              "buildTarget": "OoTTracker:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -82,7 +82,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "OoTTracker:build"
+            "buildTarget": "OoTTracker:build"
           }
         },
         "test": {
